# Subaru-TPMS-Spoofing

./: .gitignore  README.md  wav_decoded.py
C_Code/tpms_faker_raw_gcc/: Makefile  cc1101.cpp  cc1101.h  ideas_main.cpp  main.cpp  pins.h  simplespi.cpp  simplespi.h  staged_main.cpp  uart.h
C_Code/tpms_receiver_raw_gcc/: Makefile  cc1101.cpp  cc1101.h  main.cpp  uart.c
C_Code/tpms_sender_raw_gcc/: Makefile  cc1101.cpp  cc1101.h  ccpacket.h  main.cpp  pins.h  uart.c  uart.h
gnuradio/custom_blocks/: build_custom_rtl_sdr_source.sh  launch_gnuradio_custom_block.sh
gnuradio/custom_blocks/gr-custom/: CMakeLists.txt  MANIFEST.md
gnuradio/custom_blocks/gr-custom/cmake/Modules/: customConfig.cmake
gnuradio/custom_blocks/gr-custom/docs/: README.custom
gnuradio/custom_blocks/gr-custom/docs/doxygen/: Doxyfile.in
gnuradio/custom_blocks/gr-custom/docs/doxygen/other/: group_defs.dox  main_page.dox
gnuradio/custom_blocks/gr-custom/grc/: CMakeLists.txt  custom_sample_per_second_c.xml  custom_subaru_tpms_decode_cpp_char.xml  custom_subaru_tpms_decode_py_char.xml  custom_subaru_tpms_decode_py_f.xml
gnuradio/custom_blocks/gr-custom/include/custom/: CMakeLists.txt  api.h  subaru_tpms_decode_cpp_char.h
gnuradio/custom_blocks/gr-custom/lib/: CMakeLists.txt  qa_custom.cc  qa_custom.h  subaru_tpms_decode_cpp_char_impl.cc  subaru_tpms_decode_cpp_char_impl.h  test_custom.cc
gnuradio/custom_blocks/gr-custom/python/: CMakeLists.txt  __init__.py  sample_per_second_c.py  subaru_tpms_decode_py_char.py  subaru_tpms_decode_py_f.py
gnuradio/custom_blocks/gr-custom/swig/: CMakeLists.txt  custom_swig.i
gnuradio/rtl_sdr_live_to_packets/: rtl_sdr_live_to_packets.grc  top_block.py
gnuradio/rtl_sdr_recording_to_packets/: chdir.py  rtl_sdr_recording_to_packets.grc  top_block.py
scripts/: wav_to_packet_decoded.py
